--- a/src/app/(funnel)/portal-login/page.module.scss
+++ b/src/app/(funnel)/portal-login/page.module.scss
@@ -1,5 +1,5 @@
 @use '@/styles/spacing.scss' as spacing;
 
 .container {
-  padding-top: spacing.$space-48;
+  padding-top: spacing.$space-66;
 }
