--- a/src/app/(funnel)/target-score/page.module.scss
+++ b/src/app/(funnel)/target-score/page.module.scss
@@ -5,6 +5,6 @@
   height: calc(var(--vh) * 1);
   flex-direction: column;
   align-items: center;
-  padding-top: spacing.$space-48;
+  padding-top: spacing.$space-66;
   padding-bottom: env(safe-area-inset-bottom);
 }
